// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux tests should begin to add a coupon 1`] = `
Object {
  "benefitValue": null,
  "code": null,
  "errorCode": null,
  "id": null,
  "loaded": false,
  "loading": true,
}
`;

exports[`redux tests should begin to remove a coupon 1`] = `
Object {
  "benefitValue": "25%",
  "code": "DEMO25",
  "errorCode": null,
  "id": 12345,
  "loaded": false,
  "loading": true,
}
`;

exports[`redux tests should fail to add a coupon 1`] = `
Object {
  "benefitValue": null,
  "code": null,
  "errorCode": "oh noes",
  "id": null,
  "loaded": false,
  "loading": false,
}
`;

exports[`redux tests should fail to remove a coupon 1`] = `
Object {
  "benefitValue": "25%",
  "code": "DEMO25",
  "errorCode": "oh noes it didnt",
  "id": 12345,
  "loaded": true,
  "loading": false,
}
`;

exports[`redux tests should match default state 1`] = `
Object {
  "benefitValue": null,
  "code": null,
  "errorCode": null,
  "id": null,
  "loaded": false,
  "loading": false,
}
`;

exports[`redux tests should successfully add a coupon 1`] = `
Object {
  "benefitValue": "25%",
  "code": "DEMO25",
  "errorCode": null,
  "id": 12345,
  "loaded": true,
  "loading": false,
}
`;

exports[`redux tests should successfully remove a coupon 1`] = `
Object {
  "benefitValue": null,
  "code": null,
  "errorCode": null,
  "id": null,
  "loaded": false,
  "loading": false,
}
`;

exports[`redux tests should update the code draft 1`] = `
Object {
  "benefitValue": null,
  "code": "DEM",
  "errorCode": null,
  "id": null,
  "loaded": false,
  "loading": false,
}
`;

exports[`redux tests should update the code draft 2`] = `
Object {
  "benefitValue": null,
  "code": "DEMO25",
  "errorCode": null,
  "id": null,
  "loaded": false,
  "loading": false,
}
`;
